--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.21'
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'
     implementation 'dev.nextftc:ftc:1.0.0'
     implementation 'dev.nextftc:hardware:1.0.0' // If you would like to use the hardware module
 }
