--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,8 +2,9 @@ repositories {
     mavenCentral()
     google()
 
-    maven { url = 'https://maven.brott.dev/' }
+    maven { url = "https://mymaven.bylazar.com/releases" }
     maven { url= "https://maven.pedropathing.com/" }
+    maven { url = 'https://maven.brott.dev/' }
 
 }
 
@@ -16,7 +17,11 @@ dependencies {
     implementation 'org.firstinspires.ftc:Hardware:10.2.0'
     implementation 'org.firstinspires.ftc:FtcCommon:10.2.0'
     implementation 'org.firstinspires.ftc:Vision:10.2.0'
-    implementation 'com.pedropathing:pedro:1.0.9'
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'
+
+    implementation 'com.pedropathing:ftc:2.0.1'
+    implementation 'com.pedropathing:telemetry:0.0.6'
+    implementation 'com.bylazar:fullpanels:1.0.2'
 
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
